package message;

message TestMessage
{
	message TestObject {
		optional string testString = 1;
	}

	required uint32 testUint32 = 1;
	required string testString = 2;
	required TestObject testObject = 3;
}